--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
                 </p>
             </div>
             <div class="featured-text-btn">
-                <button class="btn blue-btn">Hire Me</button>
+                <button class="btn blue-btn"><a href="mailto:24101141@uap-bd.edu">Contuct me</a></button>
                 <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
             </div>
             <div class="social_icons">
-                <div class="icon"><i class="uil uil-instagram"></i></div>
-                <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
-                <div class="icon"><i class="uil uil-dribbble"></i></div>
-                <div class="icon"><i class="uil uil-github-alt"></i></div>
+                <div class="icon"><a href="https://www.instagram.com/taibullahmd/"><i class="uil uil-instagram"></i></a></div>
+                <div class="icon"><a href="https://www.facebook.com/md.taibullah.98"><i class="uil uil-facebook-f"></i></a></div>
+                <div class="icon"><a href="https://www.facebook.com/md.taibullah.98"><i class="uil uil-linkedin-alt"></i></a></div>
+                <div class="icon"><a href="https://github.com/taibullah-shikdar"><i class="uil uil-github-alt"></i></a></div>
             </div>
           </div>
           <div class="featured-image">
@@ -214,7 +214,7 @@
     <!-- --------------- FOOTER --------------- -->
     <footer>
         <div class="top-footer">
-            <p>John Doe .</p>
+            <p>TAIBULLAH  SHIKDAR</p>
         </div>
         <div class="middle-footer">
             <ul class="footer-menu">
@@ -233,10 +233,11 @@
             </ul>
         </div>
         <div class="footer-social-icons">
-            <div class="icon"><i class="uil uil-instagram"></i></div>
-            <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
-            <div class="icon"><i class="uil uil-dribbble"></i></div>
-            <div class="icon"><i class="uil uil-github-alt"></i></div>
+            <div class="icon"><a href="https://www.instagram.com/taibullahmd/"><i class="uil uil-instagram"></i></a></div>
+            <div class="icon"><a href="https://www.facebook.com/md.taibullah.98"><i class="uil uil-facebook-f"></i></a></div>
+            <div class="icon"><a href="https://www.facebook.com/md.taibullah.98"><i class="uil uil-linkedin-alt"></i></a></div>
+            <div class="icon"><a href="https://github.com/taibullah-shikdar"><i class="uil uil-github-alt"></i></a></div>
+            
         </div>
         <div class="bottom-footer">
             <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Taibullah Shikdar</a> - All rights reserved</p>
